Fixed some issues reported by sonarqube